--- a/index.html
+++ b/index.html
@@ -62,7 +62,41 @@
         </div>
       </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+          <!-- Add Employee  -->
+          <div class="card mb-4">
+            <div class="card-header">Add Train</div>
+            <div class="card-body">
+  
+              <!-- Entry Form -->
+              <form>
+                <div class="form-group">
+                  <label for="train-name-input">Train Name</label>
+                  <input class="form-control" id="train-name-input" type="text">
+                </div>
+                <div class="form-group">
+                  <label for="destination-input">Destination</label>
+                  <input class="form-control" id="destination-input" type="text">
+                </div>
+                <div class="form-group">
+                  <label for="time-input">First Train Time (HH:mm - military time)</label>
+                  <input class="form-control" id="time-input" type="text">
+                </div>
+                <div class="form-group">
+                  <label for="frequency-input">Frequency (min)</label>
+                  <input class="form-control" id="frequency-input" type="text">
+                </div>
+                <button class="btn btn-primary float-left" id="add-train-btn">Submit</button>
+              </form>
+  
+            </div>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  
 
 
   <!-- JavaScript -->
