added code to calculate time difference for next train

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Train Schedle</title>
+  <title>Train Schedule</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -35,8 +35,8 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron" style="background-color: brown; color: white">
-      <h1 class="text-center">Anytime Is Train Time</h1>
-      <h3 class="text-center">Choo Choo</h3>
+      <h1 class="text-center">Snakes on a Train</h1>
+      <h3 class="text-center">Choo Choo Bitch</h3>
     </div>
 
     <div class="row">
@@ -64,7 +64,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-          <!-- Add Employee  -->
+          <!-- Add train  -->
           <div class="card mb-4">
             <div class="card-header">Add Train</div>
             <div class="card-body">
