--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
     <!-- Jumbotron -->
     <div class="jumbotron" style="background-color: brown; color: white">
       <h1 class="text-center">Snakes on a Train</h1>
-      <h3 class="text-center">Choo Choo Bitch</h3>
+      <h3 class="text-center">It's better than SEPTA</h3>
     </div>
-
     <div class="row">
 
       <div class="col-md-12">
